Fixed issue where sponsor icons were stretched

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -354,7 +354,6 @@ input:focus{
         left: 25px;
         grid-template-columns: 1fr;
     }
-
 }
 
 /*shop.html*/
@@ -371,17 +370,17 @@ input:focus{
     width: 100%;
 }
 
-.products ul{
+.gallery ul{
     margin: 0%;
 }
 
-.products ul li{
+.gallery ul li{
      border: 1px solid white;
      width: 100%;
      position: relative;
 }
 
-li img {
+.gallery li img {
     object-fit: cover;
     width: 100%;
     height: 500px;
